More classloader logging when saving transformed class files
Signed-off-by: Ross Allan <rallanpcl@gmail.com>